    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.
    3. The regression test "pseudo-server" does not appear to run properly under Unix.

Limitations:
    1. JavaScript support is minimal
    2. JDK 1.2 or higher is required


Revision History:
 8-Aug-2002
Changes:
   1. The class com.meterware.httpunit.ScriptableObject has been renamed as com.meterware.httpunit.scripting.ScriptableDelegate

Additions:
    1. The Option object now supports a constructor and writing to the text property

 7-Aug-2002
Additions:
    1. JavaScript: the Select control now supports the length, options, and selectedIndex properties
    2. JavaScript: the Option object now supports the index, defaultSelected, selected (r/w), value (r/w) and
       text (read-only) properties

 6-Aug-2002
Acknowledgements:
    Thanks to Hans-Joerg Hessmann for a faster algorithm for the table lookups

Problems fixed:
    1. Table lookups should be faster, especially for complex and large tables

Additions:
    1. JavaScript: the link.onClick event is now supported
    2. JavaScript: the form.onSubmit event is now supported
    3. JavaScript: the form.action property is read-write

 5-Aug-2002
Additions:
    1. The JavaScript link.href attribute is now readable.
    2. JavaScript: document.images and document.<image-name> are now supported
    3. JavaScript: The image.src property is read-write
    4. WebResponse now has a getImageWithName method
    5. JavaScript execution is now automatic. It may be enabled or disable via HttpUnitOptions
    6. JavaScript: the checkbox.clicked property is read-write

Problems fixed:
    A form request created after a call to getScriptableObject().setAction() now correctly uses the new action.

 2-Aug-2002
Additions:
    1. Added JavaScript support for document.links and document.<link name> and the link 'onMouseOver' event.